Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48138

Incorrect behavior of QPinchGesture::scaleFactor(),totalScaleFactor(),lastScaleFactor() in OSX

    XMLWordPrintable

Details

    • macOS
    • bb084b45f8f84abd43a0eaebfc061c9cfda7d66b

    Description

      QPinchGesture::totalScaleFactor() always returns 1;
      QPinchGesture::scaleFactor() and QPinchGesture::lastScaleFactor() return same value, the one that should be returned by totalScaleFactor().

      The same interface functions return correct (expected) values on Windows 8.1.

      Attachments

        For Gerrit Dashboard: QTBUG-48138
        # Subject Branch Project Status CR V

        Activity

          People

            tpochep Timur Pocheptsov
            skoulik Sergei Kulik
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes